# mcc1608fs

./: .gitignore  CMakeLists.txt  MCC1608FS.cpp  MCC1608FS.h  README.md  example.cfg
cmake/: FindLibBot.cmake
extras/: 61-mcc.rules  MCCLIBUSB.1.12.tgz
lcmtypes/: MCC1608FS_scan_t.lcm
mcc_usb_1608fs_plus/: CMakeLists.txt
mcc_usb_1608fs_plus/src/: CMakeLists.txt
src/: CMakeLists.txt
src/exes/publisher/: CMakeLists.txt  MCC1608FS.cpp  MCC1608FS.hpp
src/mcc1608fs/: CMakeLists.txt  usb-1608FS-Plus.c
